@@ -1,5 +1,6 @@
 # 2023/01/29
 - Some cleanup work
+- Try making bard clickies less crashy
 
 # 2023/01/27
 - All the things
